resolved styling issue with extra white space in the bottom
It was because the offlineMsg styling was in .page.show

--- a/style.css
+++ b/style.css
@@ -609,29 +609,6 @@ template {
   text-align: center;
   margin-bottom: 0;
 }
-.page.show #offlineMsg {
-  display: none;
-}
-.page.show #offlineMsg.showOffline {
-  position: absolute;
-  top: 50%;
-  bottom: 10%;
-  left: 10%;
-  right: 10%;
-  display: grid;
-  justify-content: center;
-  align-content: center;
-}
-.page.show .offlineBox {
-  padding: 0.5rem 2rem;
-  color: #f3f1f1;
-  background-color: rgba(14, 14, 14, 0.95);
-  border-radius: 10px;
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  z-index: 100;
-}
 
 .camera-wrapper {
   min-width: 100vw;
@@ -676,6 +653,32 @@ template {
 
 #canvas.hide-canvas {
   display: none;
+}
+
+#offlineMsg {
+  display: none;
+}
+
+#offlineMsg.showOffline {
+  position: absolute;
+  top: 50%;
+  bottom: 10%;
+  left: 10%;
+  right: 10%;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+}
+
+.offlineBox {
+  padding: 0.5rem 2rem;
+  color: #f3f1f1;
+  background-color: rgba(14, 14, 14, 0.95);
+  border-radius: 10px;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  z-index: 100;
 }
 
 /* 3. Typography =============*/
